--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
           </ol>
         </div>
         <div id="enterAnswer">
-          <input type="text" id="response" class="centered hidden" />
+          <input
+            type="text"
+            id="response"
+            class="centered hidden"
+            placeholder="Number: "
+          />
           <div id="submitDiv">
             <button id="submitBtn">Begin</button>
           </div>
